# DesktopsMania

./: README.md
Front/: .gitignore  Cargo.toml  DOCKERFILE  README.md  docker-compose-exemple.yml
Front/private/: ca_cert.pem  ca_key.pem  gen_certs.sh  rsa_sha256.p12  rsa_sha256_cert.pem  rsa_sha256_key.pem
Front/src/: extra.rs  main.rs  message.rs  schema.rs  session.rs  user_gestion.rs  virtual_machine.rs
Front/src/extra/: formulaire.rs  set.rs
Front/src/user_gestion/: formulaire.rs  get.rs  set.rs
Front/src/virtual_machine/: formulaire.rs  get.rs  set.rs
Front/static/: features.css  features.js  index.css  index.js
Front/templates/: index.html.hbs  layout.html.hbs  password.html.hbs
Front/templates/section/: home.html.hbs  info.html.hbs  left.html.hbs  loading.html.hbs  login.html.hbs  navigation.html.hbs  userland.html.hbs  virtualmangment.html.hbs
manager_bdd/: Cargo.toml  DOCKERFILE  README.md
manager_bdd/migrations/final/: down.sql  up.sql
manager_bdd/src/: main.rs  schema.rs
redirection/: Cargo.toml  DOCKERFILE  README.md
redirection/src/: main.rs
yaml/: config-node-server.yaml  dashboard.yaml  front_msvc.yaml  ingressroute.yaml  kubevip.yaml  longhorn.yaml  managerbdd_msvc.yaml  metallb-configmap.yaml  metallb.yaml  novnc_msvc.yaml  pebbles_values.yaml  postgres_msvc.yaml  postgres_pv.yaml  postgres_pvc.yaml  redirect_msvc.yaml  traefik.yaml  traefik_values.yaml  virtvnc.yaml
