[package]
name = "manager_bdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.diesel]
version = "1.4.8"
features = ["postgres"] 

[dependencies.diesel_migrations]
version = "1.4.0"

[dependencies.migrations_macros]
version = "1.4.2"

[dependencies.random-string]
version = "1.0.0"

[dependencies.rust-argon2]
version = "1.0"

[dependencies.serde_json]
version = "1.0.81"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.lettre]
version = "0.10.0-rc.6"